--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,23 @@ uuid = "2eacc985-a635-41e1-b67f-45fa7ceb5b4d"
 authors = ["Bjarke Hautop <bjarke.hautop@gmail.com> and contributors"]
 version = "0.0.1-DEV"
 
+[deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
 [compat]
+Aqua = "0.8.14"
+CairoMakie = "0.15.6"
+Colors = "0.13.1"
+Distributions = "0.25.120"
+FileIO = "1.17.0"
+Images = "0.26.2"
+Random = "1.11.0"
+Test = "1"
 julia = "1.6.7"
 
 [extras]
