--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "ChessEngine"
+name = "OrbisChessEngine"
 uuid = "2eacc985-a635-41e1-b67f-45fa7ceb5b4d"
 authors = ["Bjarke Hautop <bjarke.hautop@gmail.com> and contributors"]
 version = "0.1.0"
