--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,3 @@
 [deps]
-ChessEngine = "2eacc985-a635-41e1-b67f-45fa7ceb5b4d"
+OrbisChessEngine = "2eacc985-a635-41e1-b67f-45fa7ceb5b4d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
