--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,4 @@
 [deps]
-OrbisChessEngine = "2eacc985-a635-41e1-b67f-45fa7ceb5b4d"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+OrbisChessEngine = "2eacc985-a635-41e1-b67f-45fa7ceb5b4d"
